<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp">

    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/contentDescription"
        android:src="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dishImage"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#0D000000"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:text="@string/itemName"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/restaurantName"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dishPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dishImage"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="#0D000000"
        android:gravity="center"
        android:text="@string/itemPrice"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>