<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/resImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/contentDescription"
            android:src="@color/green" />

        <RelativeLayout
            android:id="@+id/resDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resImage">

            <TextView
                android:id="@+id/resName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#0D000000"
                android:maxLines="1"
                android:text="@string/restaurantName"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/resAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resName"
                android:layout_marginTop="8dp"
                android:maxWidth="200dp"
                android:maxLines="2"
                android:text="@string/restaurantAddress"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:background="#0D000000"
                android:orientation="horizontal"
                android:padding="0dp">

                <TextView
                    android:id="@+id/resRate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/restaurantRate"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/slash"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:text="@string/five"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_green" />


            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>