<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#9C000000"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventOrganizerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/eventName"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/eventInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/eventInfo"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/eventContact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/contact"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>