<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:text="@string/itemName"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemPrice"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/contentDescription" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>