<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardElevation="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/coverCardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/resImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription"
                android:src="@color/green" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/resRate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/restaurantRate"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/resDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coverCardView"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/resName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@string/restaurantName"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/restaurantAddress"
            android:textSize="12sp" />

    </RelativeLayout>


</RelativeLayout>