<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/resDetailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/resName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:paddingBottom="8dp"
            android:text="@string/restaurantName"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxLines="2"
            android:text="@string/restaurantAddress" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/prePayCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resDetailLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tarnsparent_background_border">

            <TextView
                android:id="@+id/prePayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:text="@string/prePayment"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/resImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/restaurantAddress"
        android:src="@color/green" />

</RelativeLayout>