<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageSlidingViewPager"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/featuredResLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dotLayout">

            <ImageView
                android:id="@+id/restMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/contentDescription"
                android:padding="16dp"
                android:src="@drawable/right_arrow" />

            <TextView
                android:id="@+id/featuredResTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/featuredRestaurants"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recomDishTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/featuredResRecyclerView"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/dishMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/contentDescription"
                android:padding="16dp"
                android:src="@drawable/right_arrow" />

            <TextView
                android:id="@+id/recomDish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/recommendedDishes"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featuredResRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/featuredResLayout"
            android:clipToPadding="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recomDishRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recomDishTextView"
            android:clipToPadding="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/imageSlidingViewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </RelativeLayout>

</ScrollView>